crear no leido advertencia y otros arregles esteticos

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,9 @@
             <!-- Entrada para escribir un mensaje de respuesta -->
             <div class="input-container">
                 <input type="text" id="response" placeholder="Type your message..." required>
-                <button id="sendButton">Send</button>
+                <button id="sendButton">
+                    <img src="send-icon.png" alt="Send" width="20">
+                </button>
             </div>
         </div>
     </div>
