regresando antes de nuevo contacto

--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,18 @@
 
         <!-- Área de mensajes -->
         <div class="chat-container">
-            <div id="messages" class="messages">Select a contact to view messages...</div>
+            <div id="messages" class="messages">Selecciona un contacto para ver los mensajes...</div>
             <!-- Entrada para escribir un mensaje de respuesta -->
             <div class="input-container">
-                <input type="text" id="response" placeholder="Type your message..." required>
+                <input type="text" id="response" placeholder="Escribe tu mensaje..." required>
                 <button id="sendButton">
-                    <img src="send-icon.png" alt="Send" width="20">
+                    <img src="send-icon.png" alt="Enviar" width="20">
                 </button>
             </div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Archivos JavaScript -->
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
