--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
         <!-- Sidebar para los números de teléfono -->
         <div class="sidebar" id="sidebar">
             <h2>Chats</h2>
-            <!-- Las pestañas de los números de teléfono se generarán aquí -->
         </div>
 
         <!-- Área de mensajes -->
@@ -21,7 +20,7 @@
             <div class="input-container">
                 <input type="text" id="response" placeholder="Escribe tu mensaje..." required>
                 <button id="sendButton">
-                    <img src="send-icon.png" alt="Enviar" width="20">
+                    <img src="assets/send-icon.png" alt="Enviar" width="20">
                 </button>
             </div>
         </div>
