creación de no leido en db

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,7 @@
             <!-- Entrada para escribir un mensaje de respuesta -->
             <div class="input-container">
                 <input type="text" id="response" placeholder="Escribe tu mensaje..." required>
-                <button id="sendButton">
-                    <img src="assets/send-icon.png" alt="Enviar" width="20">
-                </button>
+                <button id="sendButton" class="send-symbol">→</button>
             </div>
         </div>
     </div>
