creacion de menu - correcion

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
         <div class="chat-container" id="chat-container">
             <!-- Al inicio se mostrará el menú aquí -->
         </div>
+        <div id="messages" class="messages">
+            <!-- Aquí se generarán los mensajes -->
+        </div>
     </div>
 
     <!-- Archivos JavaScript -->
