--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,13 @@
 
         <!-- Área de mensajes o menú -->
         <div class="chat-container" id="chat-container">
-            <!-- Al inicio se mostrará el menú aquí -->
-        </div>
-        <div id="messages" class="messages">
-            <!-- Aquí se generarán los mensajes -->
+            <div id="messages" class="messages">
+                <!-- Aquí se generarán los mensajes -->
+            </div>
+            <div class="input-container">
+                <input type="text" id="response" placeholder="Escribe tu mensaje...">
+                <button id="sendButton">→</button>
+            </div>
         </div>
     </div>
 
